test building against different yii versions

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,15 @@ matrix:
     - php: hhvm-nightly
     - php: 7.0
 
+# ensure compatibility with different core versions
+env:
+  - YII2_VERSION=2.0.0
+  - YII2_VERSION=2.0.1
+  - YII2_VERSION=2.0.2
+  - YII2_VERSION=2.0.3
+  - YII2_VERSION=@dev
+
+
 # faster builds on new travis setup not using sudo
 sudo: false
 
@@ -28,6 +37,7 @@ install:
   - travis_retry composer self-update && composer --version
   - travis_retry composer global require "fxp/composer-asset-plugin:1.0.0"
   - export PATH="$HOME/.composer/vendor/bin:$PATH"
+  - travis_retry composer require "yiisoft/yii2:$YII2_VERSION" --prefer-dist --no-interaction
   - travis_retry composer install --prefer-dist --no-interaction
   - composer show -i
 
